# nemotron-reasoning

./: .gitignore  PROJECT_DESCRIPTION.md  RESULTS_SUMMARY.md  RUNBOOK.md  SETUP.md  START_TRAINING.command  pyproject.toml
configs/: train.yaml
data/: recon.json
docs/: CHEAP_COMPUTE_AND_NEXT_STEPS.md  ENGINEERING_LOG.md  EXPLAINER.md  RESEARCH_efficient_training.md  THESIS_PROPOSAL.md
experiments/: README.md  proposal_a_solver_data_efficiency.py
scripts/: __init__.py  build_real_sft.py  build_synthetic.py  package_submission.py  run_modal.py
src/: __init__.py  rejection_sample.py  sft_train.py  trace_format.py
src/eval/: __init__.py  cv.py  holdout.py  metric.py
src/generators/: __init__.py  binary_ops.py  cipher.py  common.py  linear_eq.py  list_ops.py  modular_arith.py  number_seq.py  roman.py
src/recon/: __init__.py  taxonomy.py
src/solvers/: __init__.py  crack_bitmanip.py  crack_encrypt.py  crack_symbol.py  exact.py  inference.py
tests/: __init__.py  test_build_real_sft.py  test_crack_encrypt.py  test_crack_symbol.py  test_generators.py  test_metric.py  test_package_submission.py  test_recon.py  test_solvers_exact.py  test_solvers_inference.py  test_trace_format.py
tests/fixtures/: sample_train.csv
writeup/: NOTEBOOK_OUTLINE.md  SOLUTION_WRITEUP.md
